Fix login page footer not being hidden on mobile devices

--- a/htdocs/luci-static/argon/less/cascade.less
+++ b/htdocs/luci-static/argon/less/cascade.less
@@ -3971,6 +3971,10 @@ pre.command-output {
         right: 0 !important;
         margin-bottom: 1rem;
     }
+
+    .login-page .login-container footer {
+        display: none;
+    }
 }
 
 
